# C-NN-Framework

./: .gitignore  CMakeLists.txt  README.md
include/: ActivationLayer.h  CrossEntropy.h  DenseLayer.h  IDXReader.h  Layer.h  Loss.h  MSE.h  Matrix.h  NeuralNetwork.h  SoftMaxLayer.h  Timer.h  Utils.h
src/: ActivationLayer.cpp  CrossEntropy.cpp  DenseLayer.cpp  IDXReader.cpp  MSE.cpp  Matrix.cpp  NeuralNetwork.cpp  SoftMaxLayer.cpp  Timer.cpp  main.cpp
weights/: l1  l2  l3
weights/mnist_model/: layer_1  layer_2  layer_3  layer_4  layer_5  layer_6
